backends/drm: handle dumb buffer target correctly

It's independent of the multi gpu import mode

BUG: 482859